--- a/src/SharpNeatLib/SharpNeatLib.csproj
+++ b/src/SharpNeatLib/SharpNeatLib.csproj
@@ -56,7 +56,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net">
-      <HintPath>..\..\..\extern\SharpNeatNew\ThirdPartyAssemblies\log4net.dll</HintPath>
+      <HintPath>..\..\ThirdPartyAssemblies\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
